--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { base } from "../utils/env";
 import BaseLayout from "../layouts/BaseLayout.astro";
 const reviews = await getCollection("reviews");
 ---
-<BaseLayout title="书评首页">
+<BaseLayout title="Pinned Between Lines">
 <h1>📚 我的书评站：Pinned Between Lines</h1>
 <p>共收录 {reviews.length} 篇书评：</p>
 
