--- a/src/pages/reviews/index.astro
+++ b/src/pages/reviews/index.astro
@@ -12,7 +12,7 @@ for (const r of reviews) {
   grouped.get(key).push(r);
 }
 ---
-<BaseLayout title="书评首页">
+<BaseLayout title="分组">
 <h1>📖 所有书评分组展示</h1>
 
 {Array.from(grouped.entries()).map(([series, items]) => (
